# glusterup

./: configure.ac
api/src/: glfs-fops.c  glfs-handleops.c  glfs-handles.h  glfs-internal.h  glfs-master.c  glfs-mem-types.h  glfs.c  glfs.h
cli/src/: cli-cmd-volume.c
libglusterfs/src/: client_t.h  defaults.c  glusterfs.h
rpc/rpc-lib/src/: protocol-common.h  rpcsvc.c  rpcsvc.h
rpc/xdr/src/: glusterfs3-xdr.x  glusterfs3.h
xlators/features/: Makefile.am
xlators/features/ganesha/src/: Makefile.am  ganesha-mem-types.h  ganesha.c  ganesha.h
xlators/features/proto-locks/src/: Makefile.am  proto-locks.c
xlators/features/upcalls/: Makefile  Makefile.in
xlators/features/upcalls/src/: Makefile  Makefile.am  Makefile.in  upcalls-internal.c  upcalls-mem-types.h  upcalls.c  upcalls.h  upcalls.la  upcalls.lo
xlators/features/upcalls/src/.deps/: upcalls.Plo
xlators/features/upcalls/src/.libs/: upcalls.la  upcalls.lai
xlators/mgmt/glusterd/src/: Makefile.am  glusterd-ganesha.c  glusterd-op-sm.c  glusterd-utils.c  glusterd-utils.h  glusterd-volgen.c  glusterd-volgen.h  glusterd-volume-set.c  glusterd.h
xlators/protocol/client/src/: client-callback.c  client-rpc-fops.c
xlators/protocol/server/src/: server-helpers.c  server-rpc-fops.c  server.c
